--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -1,3 +1,11 @@
-h1 {
-  color: red;
+@font-face {
+    font-family: Avenir-Roman;
+    src: url("fonts/AvenirLTStd_Roman.otf") format("opentype");
+    font-family: Avenir-Light;
+    src: url("fonts/AvenirLTStd_Light.otf") format("opentype");
+}
+
+header {
+  font-family: 'Avenir-Roman', sans-serif;
+  font-size: 56px;
 }
