--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -13,19 +13,38 @@ header {
   height: 75px;
   color: #fff;
   background:#43E895;
+}
+
+.header-contents {
   display: flex;
   flex-direction: row;
-  
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 12px 0 12px;
 }
 
 h1 {
   font-size: 17px;
+  font-weight: bold;
+  letter-spacing: .7px;
 }
 
 .map-icon {
   background-image: url("./images/icon_map@2x.png");
+  width: 40px;
+  height: 40px;
+  background-size: contain;
+}
+
+.back-icon {
+  background-image: url("./images/ic_webBack@2x.png");
   width: 50px;
   height: 50px;
-  border: 1px solid black;
   background-size: contain;
+  background-repeat: no-repeat;
+  visibility: hidden;
+}
+
+.hidden {
+
 }
