--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -1,8 +1,8 @@
 @font-face {
     font-family: Avenir-Roman;
-    src: url("fonts/AvenirLTStd_Roman.otf") format("opentype");
+    src: url("fonts/AvenirLTStd-Roman.otf") format("opentype");
     font-family: Avenir-Light;
-    src: url("fonts/AvenirLTStd_Light.otf") format("opentype");
+    src: url("fonts/AvenirLTStd-Light.otf") format("opentype");
 }
 
 body {
@@ -26,6 +26,7 @@ h2 {
 }
 
 h3 {
+  font-family: 'Avenir-Light', sans-serif;
   font-weight: 400;
 }
 
@@ -55,9 +56,9 @@ h3 {
 
 .restaurant-index-item {
   width: 100%;
+  height: 180px;
   background-repeat: no-repeat;
   background-size: contain;
-  height: 180px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
