--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -64,6 +64,10 @@ h3 {
   justify-content: flex-end;
 }
 
+.restaurant-index-item:hover {
+  cursor: pointer;
+}
+
 .restaurant-index-item-text {
   padding: 0 0 6px 12px;
 }
