--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -72,3 +72,9 @@ h3 {
 .restaurant-index-item-text {
   padding: 0 0 6px 12px;
 }
+
+.drawer {
+  background: #000;
+  width: 100%;
+  height: 100%;
+}
