--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -41,7 +41,7 @@ h3 {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 12px 0 12px;
+  padding: 25px 12px 0 12px;
 }
 
 .map-icon {
@@ -108,4 +108,12 @@ h3 {
   flex-direction: column;
   justify-content: center;
   padding: 0 0 6px 12px;
+}
+
+.restaurant-deail-text {
+  padding: 16px 0 0 12px;
+}
+
+.contact {
+  padding-top: 26px;
 }
