--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -53,8 +53,15 @@ h3 {
   max-width: 900px;
 }
 
+.main-main {
+  display: flex;
+  justify-content: center;
+}
 .main-container {
-  text-align: center;
+  /* display: flex;
+  flex-direction: column;
+  align-items: center; */
+  width: 900px;
 }
 
 .map-icon {
@@ -84,17 +91,15 @@ h3 {
   z-index: 1;
 }
 
-.bottom {
-
-}
 
 .restaurant-index-item {
   width: 100%;
   max-width: 400px;
   min-height: 180px;
-  display: inline-grid;
   position: relative;
   overflow: auto;
+  vertical-align: top;
+  display: inline-grid;
 }
 
 .restaurant-index-item:hover {
@@ -142,6 +147,7 @@ h3 {
   padding-top: 26px;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 700px) {
+
 
 }
